--- a/templates/block/block--external-menu-block--header-language-links.html.twig
+++ b/templates/block/block--external-menu-block--header-language-links.html.twig
@@ -34,7 +34,12 @@
 
 {# Render navigation with content from another instance "globally" #}
 {% if use_global_navigation %}
-  {% block content %}
-    {{ content }}
-  {% endblock %}
+  {% embed "@hdbt/component/otherlanguages.twig" with {
+    renderButton: false,
+  } %}
+
+    {% block content %}
+      {{ content }}
+    {% endblock %}
+  {% endembed %}
 {% endif %}
