--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -79,15 +79,16 @@
 
           <div class="language-wrapper">
             {{ drupal_entity('block', block__language_switcher) }} {# Change language-menu and content in other languages-menu #}
-            <div class="block__headerlanguagelinks">
-              <a href="#otherlangs" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--open headerlanguagelinks__toggle--link"><span></span></a>
-              <a href="#" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--close headerlanguagelinks__toggle--link"><span></span></a>
-              <button id="js-otherlangs-button" class="headerlanguagelinks__toggle headerlanguagelinks__toggle--js headerlanguagelinks__toggle--open "><span></span></button>
-            </div>
+
+            {# Other languages button #}
+            {% include "@hdbt/component/otherlanguages.twig" with {
+              renderButton: true,
+            } %}
           </div>
+
           {{ drupal_entity('block', block__external_header_language_links) }} {# Other languages menu content #}
 
-          {# Placeholder for  search menu. desktop and moobile#}
+          {# Header search button and menu #}
           {% include "@hdbt/component/header-search.twig" %}
 
           {{ drupal_entity('block', block__branding_navigation) }} {# Branding menu, aka icon menu #}
