UHF-6904: reset bottom margin at desktop width

--- a/src/scss/06_components/layout/_footer.scss
+++ b/src/scss/06_components/layout/_footer.scss
@@ -67,6 +67,7 @@
     margin: $spacing 0 $spacing-double 0;
 
     @include breakpoint($breakpoint-m) {
+      margin-bottom:0;
       margin-top: $spacing-and-half;
     }
   }
