UHF-6046: Move hiding search form to proper stylesheet and make it less error-prone

--- a/src/scss/06_components/navigation/_helfi-search-form.scss
+++ b/src/scss/06_components/navigation/_helfi-search-form.scss
@@ -13,6 +13,11 @@ $-search-button-min-height: 56px;
   }
 }
 
+// Hide search form if js is disabled
+html:not(.js) .helfi-search__form {
+  display: none;
+}
+
 .helfi-search__submit-button {
   height: $-search-button-min-height;
   min-width: $-search-button-min-width;
