--- a/templates/component/helfi-search-form.twig
+++ b/templates/component/helfi-search-form.twig
@@ -7,5 +7,7 @@
       <input type="search" id="search-form" name="q" value="" size="30" maxlength="128" class="form-text hds-text-input__input" {% if placeholder %}placeholder="{{ placeholder }}" {% endif %}>
     </div>
   </div>
-  <button class="hds-button hds-button--primary helfi-search__submit-button" type="submit" value="Submit">{{ 'Search'|t({}, {'context': 'Helfi search button'}) }}</button>
+  <button class="hds-button hds-button--primary helfi-search__submit-button" type="submit" value="Submit">
+    <span class="hds-button__label">{{ 'Search'|t({}, {'context': 'Helfi search button'}) }}</span>
+  </button>
 </form>
