UHF-6046: Change menu dropdown to use nav-element only when it's used for navigation

--- a/templates/misc/nav-toggle-dropdown.twig
+++ b/templates/misc/nav-toggle-dropdown.twig
@@ -1,4 +1,9 @@
-<nav id="{{ id }}" role="navigation" class="nav-toggle-dropdown {{ modifier_class }}" aria-label="{{ description }}">
+{% if description %}
+  <nav id="{{ id }}" role="navigation" class="nav-toggle-dropdown {{ modifier_class }}" aria-label="{{ description }}">
+{% else %}
+  <div id="{{ id }}" class="nav-toggle-dropdown {{ modifier_class }}">
+{% endif %}
+
   <div class="nav-toggle-dropdown__wrapper">
     <div class="nav-toggle-dropdown__content">
       {% block content %}
@@ -6,4 +11,9 @@
       {% endblock %}
     </div>
   </div>
-</nav>
+
+{% if description %}
+  </nav>
+{% else %}
+  </div>
+{% endif %}
