UHF-6046: Fixed search form button width in mobile

--- a/src/scss/06_components/navigation/_header-search.scss
+++ b/src/scss/06_components/navigation/_header-search.scss
@@ -8,10 +8,12 @@
   padding-block: $spacing-triple;
 
   .helfi-search__form {
+    align-items: initial;
     flex-direction: column;
     margin-bottom: $spacing-and-half;
 
     @include breakpoint($breakpoint-s) {
+      align-items: flex-end;
       flex-direction: row;
     }
   }
