UHF-6046: Refactored search and otherlangs js, added translations for other languages menu

--- a/templates/component/otherlanguages.twig
+++ b/templates/component/otherlanguages.twig
@@ -39,10 +39,10 @@
       js_target: 'js-otherlangs-button',
 
       open_label: null,
-      open_screenreader: 'Open Information in other languages'|t({}, {'context': 'Other languages-menu open button text for screen readers'}),
+      open_screenreader: 'Open Information in other languages menu'|t({}, {'context': 'Other languages-menu open button text for screen readers'}),
 
       close_label: null,
-      close_screenreader: 'Close Information in other languages'|t({}, {'context': 'Other languages-menu close button text for screen readers'}),
+      close_screenreader: 'Close Information in other languages menu'|t({}, {'context': 'Other languages-menu close button text for screen readers'}),
     } %}
     {% endembed %}
   {% else %}
