--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -89,6 +89,7 @@
           {{ drupal_entity('block', block__external_header_language_links) }} {# Other languages menu content #}
 
           {# Header search button and menu #}
+          {# TO-DO remove comment from include once search is functional #}
           {% include "@hdbt/component/header-search.twig" %}
 
           {{ drupal_entity('block', block__branding_navigation) }} {# Branding menu, aka icon menu #}
