--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -196,6 +196,32 @@ $tag-vertical-padding: 5px;
 .event-form__filter-section-container {
   display: flex;
   flex-direction: column;
+
+  @include breakpoint($breakpoint-l) {
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    @include flex-gap($spacing-and-half);
+  }
+}
+
+// Override HDS style for multiple checkboxes
+.event-form__filter-section-container .hdbt-search__checkbox:not(:first-of-type) {
+  @include breakpoint($breakpoint-l) {
+    margin-top: 0;
+  }
+}
+
+.event-form__filter--date,
+.event-form__filter--location {
+  @include breakpoint($breakpoint-l) {
+    flex: 1;
+  }
+}
+
+.event-form__checkboxes-label {
+  font-weight: $font-weight-medium;
+  margin-bottom: $spacing;
 }
 
 .event-list__submit-button {
