--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -82,7 +82,7 @@
 
             {% if use_global_navigation %}
               {# Other languages button #}
-              {% include "@hdbt/compon$ent/otherlanguages.twig" with {
+              {% include "@hdbt/component/otherlanguages.twig" with {
                 renderButton: true,
               } %}
             {% endif %}
