UHF-6823: Fixed issue where wrong wrapper was targeted in order to animate the language menu when scrolling

--- a/src/scss/06_components/block/_language-switcher.scss
+++ b/src/scss/06_components/block/_language-switcher.scss
@@ -30,7 +30,7 @@ $-language-block-height: 52px;
   }
 
   &.scroll-up {
-    margin-top: -52px;
+    margin-top: calc(-1 * var(--language-block-height));
     transition-delay: 0s; // Transition delay should be 0 when hiding the switcher
 
     @include breakpoint($breakpoint-m) {
