--- a/src/scss/06_components/navigation/_branding-navigation.scss
+++ b/src/scss/06_components/navigation/_branding-navigation.scss
@@ -7,8 +7,8 @@ $-branding-icon-size-desktop: $spacing-double;
   display: grid;
   grid-template-areas:
     '. logo . brand search toggle .'
-    'lang lang lang lang lang lang lang'
-    'menu menu menu menu menu menu menu';
+    'menu menu menu menu menu menu menu'
+    'lang lang lang lang lang lang lang';
   grid-template-columns: var(--header-branding-padding) auto 1fr auto auto auto  var(--header-branding-padding);
   grid-template-rows: var(--branding-height) min-content min-content;
   position: fixed;
