--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -53,6 +53,10 @@
   <head>
     <head-placeholder token="{{ placeholder_token }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
+    <link rel="icon" href="/themes/contrib/hdbt/src/images/favicon/favicon.ico" sizes="any">
+    <link rel="icon" href="/themes/contrib/hdbt/src/images/favicon/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/themes/contrib/hdbt/src/images/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="/themes/contrib/hdbt/src/images/favicon/manifest.webmanifest">
     <css-placeholder token="{{ placeholder_token }}">
     <js-placeholder token="{{ placeholder_token }}">
   </head>
