UHF-6829: UHF-6829: Removed dropdown button when there is no children.

--- a/templates/navigation/menu.html.twig
+++ b/templates/navigation/menu.html.twig
@@ -54,7 +54,7 @@
       {% endif %}
 
       {% set link_id = 'aria-id-' ~ random() %}
-      {% set item_is_collabsible = (allow_collabsible and (item.is_collapsed or item.is_expanded)) ? true : false %}
+      {% set item_is_collabsible = (allow_collabsible and (item.is_collapsed or item.is_expanded) and has_children) ? true : false %}
 
       {% set item_classes = [
         'menu__item',
