UHF-7021: Changed news tags to static

--- a/src/scss/06_components/_tags.scss
+++ b/src/scss/06_components/_tags.scss
@@ -16,9 +16,11 @@
   @include tag('interactive');
 }
 
-.content-tags__tags--static span {
+.content-tags__tags--static span,
+.content-tags__tags--static li {
   @include tag('static');
 }
+
 
 .content-tags__tags--static .content-tags__tags__tag--coat-of-arms span {
   background-color: $color-coat-of-arms-medium-light;
