--- a/templates/block/block--footerbottomnavigation.html.twig
+++ b/templates/block/block--footerbottomnavigation.html.twig
@@ -32,9 +32,9 @@
  */
 #}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav role="navigation" {{ attributes|without('role', 'aria-labelledby').addClass('footer-bottom__navigation') }}>
+<div {{ attributes|without('role', 'aria-labelledby').addClass('footer-bottom__navigation') }}>
   {# Menu. #}
   {% block content %}
     {{ content }}
   {% endblock %}
-</nav>
+</div>
