Fix select focus ring where visually hidden element is between select and focusring-element

--- a/src/scss/06_components/forms/_select.scss
+++ b/src/scss/06_components/forms/_select.scss
@@ -83,7 +83,8 @@
     width: 0.8em;
   }
 
-  select:focus + .hdbt--select-focus {
+  select:focus + .hdbt--select-focus,
+  select:focus + .visually-hidden + .hdbt--select-focus {
     border: 2px solid var(--focus-outline-color);
     border-radius: inherit;
     bottom: -1px;
