UHF-5663: Enable search bar

--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -87,14 +87,14 @@
               } %}
             {% endif %}
           </div>
-          
+
           {% if use_global_navigation %}
             {{ drupal_entity('block', block__external_header_language_links) }} {# Other languages menu content #}
           {% endif %}
 
           {# Header search button and menu #}
           {# TO-DO remove comment from search include once it is functional #}
-          {# {% include "@hdbt/component/header-search.twig" %} #}
+          {% include "@hdbt/component/header-search.twig" %}
 
           {{ drupal_entity('block', block__branding_navigation) }} {# Branding menu, aka icon menu #}
 
