Applied sass-migrator division **/*.scss to each scss file.

--- a/src/scss/00_functions/_aspect-ratio.scss
+++ b/src/scss/00_functions/_aspect-ratio.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @function aspect-ratio-padding($aspect-ratio) {
-  @return (1 / $aspect-ratio) * 100%;
+  @return math.div(1, $aspect-ratio) * 100%;
 }
