--- a/src/scss/06_components/media/_image-placeholder.scss
+++ b/src/scss/06_components/media/_image-placeholder.scss
@@ -1,4 +1,6 @@
-$-placeholder-aspect-ratio: 16 / 9;
+@use "sass:math";
+
+$-placeholder-aspect-ratio: math.div(16, 9);
 
 // TODO: Move under correct component when correct component is done.
 .image-placeholder {
