--- a/src/scss/06_components/paragraphs/_hero.scss
+++ b/src/scss/06_components/paragraphs/_hero.scss
@@ -313,7 +313,7 @@ $koro-height: 50px;
 
     @if $component-side-padding-mobile != $component-side-padding-desktop {
       @include breakpoint($component-spacing-breakpoint) {
-        max-width: ($component-side-padding-desktop + $content-area-wrapper-width-max + $component-side-padding-desktop) / 2;
+        max-width: ($component-side-padding-desktop + $content-area-wrapper-width-max + $component-side-padding-desktop) * 0.5;
       }
     }
   }
@@ -341,7 +341,7 @@ $koro-height: 50px;
 
     @if $component-side-padding-mobile != $component-side-padding-desktop {
       @include breakpoint($component-spacing-breakpoint) {
-        max-width: ($component-side-padding-desktop + $content-area-wrapper-width-max + $component-side-padding-desktop) / 2;
+        max-width: ($component-side-padding-desktop + $content-area-wrapper-width-max + $component-side-padding-desktop) * 0.5;
       }
     }
 
