--- a/src/scss/06_components/paragraphs/_hero.scss
+++ b/src/scss/06_components/paragraphs/_hero.scss
@@ -242,6 +242,10 @@ $koro-height: 50px;
   }
 }
 
+.hero__container .helfi-search__form .hds-text-input__label {
+  color: inherit;
+}
+
 /**
  * DESIGNS
  */
