UHF-2696: UHF-2696: Set body to 1rem.

--- a/src/scss/03_generic/_base.scss
+++ b/src/scss/03_generic/_base.scss
@@ -21,6 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: $base-font-family;
+  font-size: 1rem; // this should fix UHF-2696
   line-height: $base-line-height;
   // stylelint-enable order/properties-alphabetical-order
 
