UHF-6960: Replaced logo links to point to Etusivu-instance.

--- a/templates/layout/region--footer-bottom.html.twig
+++ b/templates/layout/region--footer-bottom.html.twig
@@ -25,10 +25,10 @@
             'logo',
             'logo--footer',
           ],
-          'title': site_name,
+          'title': city_name,
           'rel': 'home',
         } %}
-        {{ link(link_title, site_front_url, link_attributes) }}
+        {{ link(link_title, frontpage_instance_url, link_attributes) }}
 
         {% if content %}
           {{ content }}
