Fix tags having double styling

--- a/src/scss/06_components/_tags.scss
+++ b/src/scss/06_components/_tags.scss
@@ -16,8 +16,7 @@
   @include tag('interactive');
 }
 
-.content-tags__tags--static span,
-.content-tags__tags--static li {
+.content-tags__tags--static span {
   @include tag('static');
 }
 
